[package]
name = "egui-multiwin"
version = "0.2.0"
description="A crate that allows for multiple windows with egui"
license = "MIT OR Apache-2.0"
edition = "2018"
publish = ["crates-io"]
repository = "https://github.com/uglyoldbob/egui-multiwin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["egui/serde"]

[dependencies]
egui = "0.23"
egui_glow = { version = "0.23", features = ["clipboard", "winit", "links"]}
winit = "0.28.6"
glutin = "0.30.8"
lazy_static = "1.4.0"
raw-window-handle = "0.5.2"
thiserror = "1.0.40"
