[package]
name = "egui-multiwin"
version = "0.2.2"
description="A crate that allows for multiple windows with egui"
license = "MIT OR Apache-2.0"
edition = "2018"
publish = ["crates-io"]
repository = "https://github.com/uglyoldbob/egui-multiwin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["egui/serde"]

[dependencies]
arboard = "3.2.1"
egui = "0.23"
egui_glow = { version = "0.23", features = ["winit", "links"]}
enum_dispatch = "0.3.12"
winit = "0.28.7"
glutin = "0.30.10"
lazy_static = "1.4.0"
raw-window-handle = "0.5.2"
thiserror = "1.0.40"
