[package]
name = "egui-multiwin"
version = "0.3.1"
description="A crate that allows for multiple windows with egui"
license = "MIT OR Apache-2.0"
edition = "2018"
publish = ["crates-io"]
repository = "https://github.com/uglyoldbob/egui-multiwin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["egui/serde"]

[dependencies]
arboard = "3.3.2"
egui = "0.27.2"
egui_glow = { version = "0.27.2", features = ["winit", "links"]}
enum_dispatch = "0.3.13"
winit = {version = "0.29.15", features = ["rwh_05"] }
glutin = "0.31.3"
lazy_static = "1.4.0"
raw-window-handle = "0.6"
raw-window-handle-5 = { package = "raw-window-handle", version = "0.5.2" }
thiserror = "1.0.59"
