[package]
name = "multiwin-demo"
version = "0.1.0"
edition = "2018"
publish = ["crates-io"]

[dependencies]
egui-multiwin = { version = "0.1.0",  path = "../egui-multiwin" }
egui = { version = "0.19.0" }
egui_glow = { version = "0.19.0", features = ["clipboard", "winit", "links"]}
glutin = "0.29.1"
