[package]
name = "multiwin-demo6"
version = "0.1.0"
edition = "2018"
publish = ["crates-io"]

[dependencies]
arboard = "3.2.1"
egui = "0.23"
egui_glow = { version = "0.23", features = ["winit", "links"]}
winit = "0.28.7"
glutin = "0.30.10"
lazy_static = "1.4.0"
raw-window-handle = "0.5.2"
thiserror = "1.0.40"
